k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mbakmegumi
  labels:
    app: mbakmegumi
spec:
  type: ClusterIP
  selector:
    app: mbakmegumi
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
