k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbakmegumi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mbakmegumi.ekel.dev
      secretName: mbakmegumi-tls
  rules:
    - host: mbakmegumi.ekel.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mbakmegumi
                port:
                  number: 80
